Fixing minor things

--- a/coop/index.html
+++ b/coop/index.html
@@ -20,9 +20,11 @@
   <span class="graph-title"> Companies students have co-oped at </span>
   <div class="coop-cloud-legend">
     Legend:
-    <span class="cloud-small">Less enjoyed, less students worked at</span>
-    <span class="cloud-big">More enjoyed, more students worked at</span>
+    <br/>
+    <span class="cloud-not-enjoyed">Less enjoyed</span>, <span class="cloud-enjoyed">more enjoyed</span>
+    <span class="cloud-less">Less students</span>, <span class="cloud-more">more students</span>
   </div>
+  <div class="hvb"></div>
   <div id="coop-cloud">
   </div>
 </div>
