--- a/coop/index.html
+++ b/coop/index.html
@@ -21,8 +21,12 @@
   <div class="coop-cloud-legend">
     Legend:
     <br/>
-    <span class="cloud-not-enjoyed">Less enjoyed</span>, <span class="cloud-enjoyed">more enjoyed</span>
+    <div class="cloud-1">
+      <span class="cloud-not-enjoyed">Less enjoyed</span>, <span class="cloud-enjoyed">more enjoyed</span>
+    </div>
+    <div class="cloud-2">
     <span class="cloud-less">Less students</span>, <span class="cloud-more">more students</span>
+    </div>
   </div>
   <div class="hvb"></div>
   <div id="coop-cloud">
