--- a/end/index.html
+++ b/end/index.html
@@ -1,8 +1,7 @@
 <h1> Thank you for reading!</h1>
 <p class="full">
 <span class="big">
-  I hope you enjoyed the Software Engineering 2018 Class Profile as much as I
-  had making it!
+  I hope you enjoyed the Software Engineering 2018 Class Profile!
 </span>
 </p>
 
