Add clarification on housing

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -28,7 +28,9 @@ occur after every study term starting after 1B and ending before 4B.
 <br /><br />
 
 All analysis involving income is expressed in Canadian dollars (CAD). The exchange
-rate used to convert from USD to CAD depends on time and is stated where relevant.
+rate used to convert from USD to CAD depends on time and is stated where
+relevant. All salaries include monthly housing stipend or the monthly cost of
+corporate housing if applicable.
 
 <br /><br />
 This class profile was inspired from the Systems Design Engineering 2017 Class Profile created
