Remove no hispanic line

--- a/background/index.html
+++ b/background/index.html
@@ -28,7 +28,7 @@
   Students come from many different ethnic backgrounds, which spans over 27 different countries.
   </span>
   There was a significant number of students Caucasians, South Asians, and East
-  Asians. There were no hispanic students in our class.
+  Asians.
 </p>
 <div class="half second">
   <span class="graph-title">Students' ethnicities</span>
