--- a/introduction/index.html
+++ b/introduction/index.html
@@ -36,3 +36,51 @@ corporate housing if applicable.
 This class profile was inspired from the Systems Design Engineering 2017 Class Profile created
 by Joey Loi and Atef Chaudhury.
 </p>
+
+<div class="vbx4"></div>
+
+<h1>Table of contents</h1>
+<div class="half">
+  <ul class="toc">
+    <li>1 <a href="#coop">Co-op</a></li>
+    <li>
+      <p class="nested">
+        Companies, locations, salary, factors affecting salary
+      </p>
+    </li>
+    <li>2 <a href="#background">Background</a></li>
+    <li>
+      <p class="nested">
+        Gender, ethnicity, high school, family
+      </p>
+    </li>
+    <li>3 <a href="#academics">Academics</a></li>
+    <li>
+      <p class="nested">
+        Grades, attendance, courses, factors affecting grades
+      </p>
+    </li>
+  </ul>
+</div>
+<div class="half second">
+  <ul class="toc">
+    <li>4 <a href="#outcome">Program outcome</a></li>
+    <li>
+      <p class="nested">
+        Rating, preferred program, paths
+      </p>
+    </li>
+    <li>5 <a href="lifestyle">Interests and lifestyle</a></li>
+    <li>
+      <p class="nested">
+        Extracurriculars, software discipline, lifestyle
+      </p>
+    </li>
+    <li>6 <a href="#future">Future</a></li>
+    <li>
+      <p class="nested">
+        Grades, attendance, courses, factors affecting grades
+      </p>
+    </li>
+  </ul>
+</div>
