--- a/introduction/index.html
+++ b/introduction/index.html
@@ -70,7 +70,7 @@ by Joey Loi and Atef Chaudhury.
         Rating, preferred program, paths
       </p>
     </li>
-    <li>5 <a href="lifestyle">Interests and lifestyle</a></li>
+    <li>5 <a href="#lifestyle">Interests and lifestyle</a></li>
     <li>
       <p class="nested">
         Extracurriculars, software discipline, lifestyle
