Outcome gender rating fix

--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -17,7 +17,7 @@
 
 <div class="vb"></div>
 
-<h3> How was the experience per gender? </h3>
+<h3> the experience per gender </h3>
 <p class="half">
   <span class="big">
     Being a part of Software Engineering was life-changing for most of
