Add class photo

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -12,7 +12,11 @@
   how university went for students.
 </p>
 
-<div class="vbx4"></div>
+<div class="vb"></div>
+<div class="class-photo">
+  <img src="./img/class.jpg" />
+</div>
+<div class="vbx6"></div>
 
 <h1> Preface </h1>
 
