--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -5,8 +5,7 @@
   <span class="big">Unlike high school, almost half of students were not involved in any
     extracurriculars during undergrad.
   </span>
-  Amongst those that were involved, almost
-  every student were the only SE 2018 student in their respective extracurricular
+  Most students were the only SE 2018 student involved in their club.
   activity.
   <br /><br />
   Most students did not pursue any extracurricular activities related to STEM.
@@ -23,7 +22,7 @@
 <h3> Programming language</h3>
 <p class="half">
   <span class="big">
-  Python is the most popular programming language.
+  Python is the most popular programming language among SE students.
   </span>
   Python’s versatility for back-end web, scripting, and especially machine learning could explain
   why it is so popular in our class. Many of these disciplines are highly in-demand
@@ -68,7 +67,7 @@
 
 <div class="vbx2"></div>
 
-<h3> Desktop OS </h3>
+<h3> Desktop operating system </h3>
 <p class="half">
   <span class="big">
   The majority of students are using a macOS machine.
@@ -83,7 +82,7 @@
   users during university.
 </p>
 <div class="half second">
-  <span class="graph-title"> Favourite desktop OS </span>
+  <span class="graph-title"> Favourite desktop operating system </span>
   <div id="desktop"></div>
 </div>
 
@@ -122,7 +121,7 @@
   hours a month to their side projects. This should be taken with a grain of
   salt since commitment may vary depending on the term and year.
   <br /><br />
-  During the first few years of SE, side projects is often a means to getting
+  During the first few years of SE, side projects are often a means to getting
   a better co-op job because it compensates for the lack of software work experience.
 </p>
 <div class="half second">
