Add motivations and advice

--- a/end/index.html
+++ b/end/index.html
@@ -1,8 +1,8 @@
-<h1> Thank you for reading!</h1>
+<h1> Thank you!</h1>
 <p class="full">
-<span class="big">
-  I hope you enjoyed the Software Engineering 2018 Class Profile!
-</span>
+  <span class="big">
+    I hope you enjoyed reading the University of Waterloo Software Engineering 2018 Class Profile!
+  </span>
 </p>
 
 <div class="vbx3"></div>
@@ -35,7 +35,7 @@ Systems Design Engineering
 
 <div class="hvb"></div>
 <p class="full">
-<b>Jenny Sun, Derrek Chow, Kaitlyn Yong, and Bo Peng</b> for providing feedback on the
+<b>Jenny Sun, Derrek Chow, Kaitlyn Yong</b>, and <b>Bo Peng</b> for providing feedback on the
 initial drafts of the class profile.
 </p>
 
@@ -68,7 +68,7 @@ Academic Calendar
 
 <h3> Inspirations </h3>
 <p class="full">
-SYDE 2017 Class Profile
+Systems Design Engineering 2017 Class Profile
 <a target="_blank" href="http://joeyloi.com/SYDE2017classprofile.pdf">
 http://joeyloi.com/SYDE2017classprofile.pdf
 </a>
@@ -115,6 +115,6 @@ SE Exit Survey results  (not related to Class Profile)
 <p class="full">
 Let me know what you think! You can reach me at
 <a href="mailto:andy.zhang@edu.uwaterloo.ca?subject=Hello!">
-  andy.zhang@edu.uwaterloo.ca
+  andy.zhang@edu.uwaterloo.ca.
 </a>
 </p>
