--- a/future/index.html
+++ b/future/index.html
@@ -27,12 +27,31 @@
 
 <div class="vbx2"></div>
 
+<h3> Motivations </h3>
+<p class="half">
+  <span class="big">
+    Good compensation and growth as an engineer were the main
+    factors affecting post-graduation plans.
+  </span>
+  This could explain why California was a popular choice for full-time location.
+  <br /><br />
+  Although family may be the least popular factor, most students working away
+  from home have expressed interest in working near their families in the
+  future.
+</p>
+<div class="half second">
+  <span class="graph-title">Factors affecting post-graduation plans</span>
+  <div id="motivation"></div>
+</div>
+
+<div class="vbx2"></div>
+
 <h3> Debt </h3>
 <p class="half">
   <span class="big">
     65% of students are graduating debt-free.
   </span>
-  30% of students have less than $30,000 in debt. Amongst students who are
+  30% of students have less than $30,000 in debt. Among students who are
   in debt, the median debt is $22,500.
   <br /><br />
   In each income bracket, there are at least two students who graduated debt-free.
@@ -42,3 +61,44 @@
   <span class="graph-title">Debt per family income class</span>
   <div id="debt"></div>
 </div>
+
+<div class="vbx2"></div>
+
+<h3> Advice </h3>
+<p class="full">
+  <span class="big">
+    "Figure out which advice applies best to you and ignore the rest."
+  </span>
+  The following is a summary of the advice shared by students with the
+  intention of being shared with both prospective and current SE students.
+  Many of the sentences
+  are directly quoted or rephrased from the original advice.
+  <br />
+  <p class="quote">
+  Your success should not be defined by others. Just because someone else is better than you at
+  something, it does not mean that you're failing. Instead, be open and realize
+  you can learn something from everyone. Realize that your peers' successes
+  should be motivation rather than a reason to put yourself down.
+  <br /><br />
+  Find value in modesty, empathy, and courage. Learn to develop good habits
+  early on, and budget your time based on your options and priorities. These
+  skills are indispensable during university. Find a hobby you love. That
+  hobby just might be software engineering, or it could be something completely
+  different like drawing video game characters.
+  <br /><br />
+  Stop worrying about marks. They don't get you far unless you're looking at
+  post graduate studies. This also means that you should know when to stop working
+  on assignments to work on other things. "After graduation, I won't remember
+  many of the bogus technical concepts. I will, however, remember the late
+  nights in the SE lab with friends, fooling around while doing a last minute
+  assignment."
+  <br /><br />
+  Try out as many different co-ops as possible. And don't Cali or continuous.
+  It's tough to get your first job, but don't give up. And if you get a co-op at
+  a big company, it does not mean that you're at the top of the world.
+  <br /><br />
+  And most importantly, university goes by in a flash, so enjoy it!
+  <br /><br /><br />
+  - University of Waterloo Software Engineering Class of 2018
+  </p>
+</p>
