--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -201,8 +201,8 @@
 <h3> Sleeping </h3>
 <p class="half">
   <span class="big">
-  Software engineers may have a reputation for being nocturnal, but most of
-  SE students aren’t night owls.
+  Software engineers may have a reputation for being nocturnal, but most
+  students aren’t night owls.
   </span>
   In fact, 72% of students usually sleep before 1AM.
   However, some students do still prefer sleeping late, possibly because they
