--- a/background/index.html
+++ b/background/index.html
@@ -25,7 +25,7 @@
 <h3> Ethnicity</h3>
 <p class="half">
   <span class="big">
-  Students come from many different ethnic backgrounds, which spans over 27 different countries.
+  Students come from many different ethnic backgrounds, which span 27 different countries.
   </span>
   There was a significant number of students Caucasians, South Asians, and East
   Asians.
