--- a/coop/index.html
+++ b/coop/index.html
@@ -52,7 +52,7 @@
   Penh, Shanghai, Tokyo, etc.
 </p>
 <div class="half second">
-  <span class="graph-title"> Areas students have worked in </span>
+  <span class="graph-title"> Locations students have worked in </span>
   <div id="work-location">
   </div>
 </div>
@@ -70,7 +70,7 @@
   been better suited for them.
 </p>
 <div class="half second">
-  <span class="graph-title"> Areas of favourite companies </span>
+  <span class="graph-title"> Location of favourite companies </span>
   <div id="favourite-location"> </div>
 </div>
 
