--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -133,7 +133,8 @@ I’m grateful I took the leap that landed me my first product role because once
     <p>
       During my 2nd co-op, I ended up having to do customer support part-time for a month which helped me build user empathy. I was also involved with the Product Vision Club, a product management community.
       <br /><br />
-      I was hooked and ended up leading the club as well as organizing CUTC.
+      I was hooked and ended up leading the club as well as organizing Canadian
+      Undergraduate Technology Conference.
       Taking the risk to put myself in uncomfortable situations helped me
       transition into product roles early on, and I’ve loved the world of
       product management ever since.
@@ -153,7 +154,8 @@ I’m grateful I took the leap that landed me my first product role because once
   <div class="path-item">
     <span class="big path-title">Balancing school and a startup</span>
     <p>
-      At the end of my third year, Marcus and I had an opportunity to join an early-stage startup building autonomous semi trucks. In coordination with the SE Department, I was able to finish my degree remotely by submitting assignments online and flying back for exams. During this time, I got to be a part of Embark’s incredible journey as we grew from a small team of 5 engineers to one of the leading players in the self-driving space.
+      At the end of my third year, Marcus and me had an opportunity to join an
+      early-stage startup building autonomous semi trucks. In coordination with the SE Program, I was able to finish my degree remotely by submitting assignments online and flying back for exams. During this time, I got to be a part of Embark’s incredible journey as we grew from a small team of 5 engineers to one of the leading players in the self-driving space.
       <br /><br />
       Taking this unconventional path gave Marcus and I incredible experience beyond my schooling that will follow me throughout my career.
     </p>
