--- a/coop/index.html
+++ b/coop/index.html
@@ -112,7 +112,7 @@ imply higher job satisfaction.
   <span class="big">
     Grades do not correlate with salary at all.
   </span>
-  In other words, having a cumulative average does not imply that the student
+  In other words, having a high cumulative average does not imply that the student
   will get a good salary in the upcoming co-op term. This suggests that there
   are more important factors than grades when it comes to finding a good job.
   <br /><br />
