Small fix in debt

--- a/future/index.html
+++ b/future/index.html
@@ -54,7 +54,8 @@
   30% of students have less than $30,000 in debt. Among students who are
   in debt, the median debt is $22,500.
   <br /><br />
-  In each income bracket, there are at least two students who graduated debt-free.
+  It's important to note that there were students from each family income bracket
+  who graduated debt-free.
   All students with family income higher than $200,000 graduated debt-free.
 </p>
 <div class="half second">
