Small feedback fixes

--- a/coop/index.html
+++ b/coop/index.html
@@ -82,7 +82,7 @@
     By the last co-op term, salaries tripled in comparison to the first.
   </span>
   Average monthly salaries per co-op term were <b>$2914, $4236, $5895, $7981, $9338,
-    $10015</b> (in CAD).
+    $10015</b> (in CAD, includes housing stipend).
   <br /><br />
   The difference could be explained by the increase in salaries and
   stipends to compensate for the difference in living costs between different
@@ -91,7 +91,7 @@
   approximately $700 per month.
 </p>
 <div class="half second">
-  <span class="graph-title"> Monthly salaries per co-op term in CAD</span>
+  <span class="graph-title"> Monthly compensation per co-op term in CAD</span>
   <div id="salary"></div>
 </div>
 
