--- a/future/index.html
+++ b/future/index.html
@@ -59,7 +59,7 @@
   All students with family income higher than $200,000 graduated debt-free.
 </p>
 <div class="half second">
-  <span class="graph-title">Debt per family income class</span>
+  <span class="graph-title">Debt per family income bracket</span>
   <div id="debt"></div>
 </div>
 
