--- a/introduction/index.html
+++ b/introduction/index.html
@@ -83,7 +83,7 @@ by Joey Loi and Atef Chaudhury.
     <li>6 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
-        Grades, attendance, courses, factors affecting grades
+        Debt, post-graduation plans
       </p>
     </li>
   </ul>
