--- a/coop/index.html
+++ b/coop/index.html
@@ -25,7 +25,7 @@
       <span class="cloud-not-enjoyed">Less enjoyed</span>, <span class="cloud-enjoyed">more enjoyed</span>
     </div>
     <div class="cloud-2">
-    <span class="cloud-less">Less students</span>, <span class="cloud-more">more students</span>
+    <span class="cloud-less">Fewer students</span>, <span class="cloud-more">more students</span>
     </div>
   </div>
   <div class="hvb"></div>
