Refactor directory structure

--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@ layout: main
 ---
 <section class="bg-hero">
     <div class="content">
-        {% include_relative hero/index.html %}
+        {% include_relative content/hero.html %}
     </div>
 </section>
 <section class="bg-8">
     <div class="content">
-        {% include_relative introduction/index.html %}
+        {% include_relative content/introduction.html %}
     </div>
 </section>
 <section class="bg-2">
     <div class="content">
-        {% include_relative coop/index.html %}
+        {% include_relative content/coop.html %}
     </div>
 </section>
 <section class="bg-4">
     <div class="content">
-        {% include_relative background/index.html %}
+        {% include_relative content/background.html %}
     </div>
 </section>
 <section class="bg-3">
     <div class="content">
-        {% include_relative academics/index.html %}
+        {% include_relative content/academics.html %}
     </div>
 </section>
 <section class="bg-5">
     <div class="content">
-        {% include_relative outcomes/index.html %}
+        {% include_relative content/outcomes.html %}
     </div>
 </section>
 <section class="bg-1">
     <div class="content">
-        {% include_relative lifestyle/index.html %}
+        {% include_relative content/lifestyle.html %}
     </div>
 </section>
 <section class="bg-7">
     <div class="content">
-        {% include_relative future/index.html %}
+        {% include_relative content/future.html %}
     </div>
 </section>
 <section class="bg-8">
     <div class="content">
-        {% include_relative end/index.html %}
+        {% include_relative content/end.html %}
     </div>
 </section>
 <!-- Global site tag (gtag.js) - Google Analytics -->
