--- a/content/end.html
+++ b/content/end.html
@@ -109,7 +109,7 @@ SE Exit Survey results  (not related to Class Profile)
 </a>
 </p>
 
-<div class="vb"></div>
+<div class="vbx2"></div>
 
 <h2> Get in touch! </h2>
 <p class="full">
