--- a/content/hero.html
+++ b/content/hero.html
@@ -1,8 +1,10 @@
 <div class="title">
-  UWaterloo Software <br />
-  Engineering 2018 <br />
-  Class Profile
-</div>
-<div class="subtitle">
-  Andy Zhang, June 2018
+  Software
+  Engineering <br />
+  2018 Class Profile
+  <br />
+  <span class="subtitle">
+    <span class="university">University of Waterloo</span><br />
+    Andy Zhang, June 2018
+  </span>
 </div>
