Add Placeholder Miscellaneous Section

--- a/content/introduction.html
+++ b/content/introduction.html
@@ -80,7 +80,13 @@ by Joey Loi and Atef Chaudhury.
         Extracurriculars, software discipline, lifestyle
       </p>
     </li>
-    <li>6 <a href="#future">Future</a></li>
+    <li>6 <a href="#misc">Miscellaneous</a></li>
+    <li>
+      <p class="nested">
+        Reddit usage, academic burnout, conflicts, 
+      </p>
+    </li>
+    <li>7 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
         Debt, post-graduation plans
