--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ layout: main
         {% include_relative content/lifestyle.html %}
     </div>
 </section>
+<section class="bg-4">
+    <div class="content">
+        {% include_relative content/misc.html %}
+    </div>
+</section>
 <section class="bg-7">
     <div class="content">
         {% include_relative content/future.html %}
