--- a/content/misc.html
+++ b/content/misc.html
@@ -2,18 +2,18 @@
 <h3> Gender </h3>
 <p class="half">
   <span class="big">
-    Big text
+    We made it through Waterloo Engineering but not without some hurdles along the way.
   </span>
-  Small text
-  <br /> <br />
-  There are also many on-campus communities that supports the success of women in
-  computer science at UWaterloo.
-  One student preferred not to disclose.
+  On average, respondants felt burnout in 3.34 of 8 academic terms (~42%).
+  The median and mode were both 2.
+  <br /> <br /> <!-- Newline -->
+  The results are heavily skewed towards the lower levels, meaning that
+  most respondants found the academic aspect of SE manageable. 
 </p>
-<!-- <div class="half second">
-  <span class="graph-title">Gender proportion in class</span>
-  <div id="gender"></div>
-</div> -->
+<div class="half second">
+  <span class="graph-title">Count of academic terms in which burnout occurred </span>
+  <div id="burnout"></div>
+</div>
 
 <div class="vbx2"></div>
 
