--- a/content/misc.html
+++ b/content/misc.html
@@ -1,5 +1,5 @@
 <h1 id="misc"> Miscellaneous </h1>
-<h3> Gender </h3>
+<h3> Burnout </h3>
 <p class="half">
   <span class="big">
     We made it through Waterloo Engineering but not without some hurdles along the way.
