Add Misc Graphs on Reddit, Fights

--- a/content/misc.html
+++ b/content/misc.html
@@ -17,3 +17,35 @@
 
 <div class="vbx2"></div>
 
+<h3> Physical Conflict </h3>
+<p class="half">
+  <span class="big">
+    No one was involved in a physical fight outside of a martial arts setting
+    during their degree.
+  </span>
+  This question was asked to get some signal on conflicts that SE students may have
+  been involed in. All 49 respondants said they had never fought outside a sport
+  setting.
+</p>
+<div class="half second">
+  <span class="graph-title">Involvement in fights outside of Martial Arts</span>
+  <div id="fights"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3> Reddit Usage </h3>
+<p class="half">
+  <span class="big">
+    The University of Waterloo had the world's most populated university subreddit
+    until recently.
+  </span>
+  Needless to say, we're big redditors. Here is a breakdown of how many hours were
+  spent by respondants on the platform.
+</p>
+<div class="half second">
+  <span class="graph-title">Weekly Reddit usage</span>
+  <div id="reddit"></div>
+</div>
+
+<div class="vbx2"></div>
