Add Misc Stories Subsection

--- a/content/misc.html
+++ b/content/misc.html
@@ -49,3 +49,32 @@
 </div>
 
 <div class="vbx2"></div>
+
+<h3> Customizing the experience </h3>
+<p class="full">
+Reflecting on our time at Waterloo means more than making some graphs. Here are
+some stories over the past 5 years.
+</p>
+<div class="vb"></div>
+<div class="half path-section"> <!-- TODO: Maybe make it full width? -->
+  <div class="path-item">
+    <span class="big path-title">Turnt on a Tuesday</span>
+    <p>
+      "I got drunk at a work party on time in San Francisco on a work term. I don't
+      remember anything that happened that night but I woke up in a hospital with
+      vomit on my jeans, and was told I was found on the side of some street.
+      <br /><br />
+      Hospital and ambulance bills ended up costing me over $6000 USD, and my
+      travel insurance didn't cover it because it was a 'self-inflicted injury'.
+      Thankfully I had work insurance and only ended up paying $2000. I went in
+      to work the next day.
+      <br /><br />
+      The team's parties no longer serve shots."
+      <br /><br />
+    </p>
+  </div>
+
+  <div class="vbx2"></div>
+
+  <!-- TODO: Add more stories or more this to a new section -->
+</div>
