Add Misc Graph on Crying Freq

--- a/content/misc.html
+++ b/content/misc.html
@@ -78,3 +78,25 @@ some stories over the past 5 years.
 
   <!-- TODO: Add more stories or more this to a new section -->
 </div>
+
+<h3> Crying Frequency </h3>
+<p class="half">
+  <span class="big">
+    Coping with all that life throws at you at these very developmental years is
+    a difficult task.
+  </span>
+  Everyone expresses themselves differently and crying is a natural, common,
+  but unfortunately minimized method.
+  <br /><br />
+  Of those who responded, Waterloo SE students cried once a term on mode and median,
+  1.7 times on average.
+  <br /><br />
+  It is difficult to determine how these results map onto the total SE student population.
+  A non-answer could imply a (low or high) extremity.
+</p>
+<div class="half second">
+  <span class="graph-title">Average frequency of crying in a term</span>
+  <div id="crying"></div>
+</div>
+
+<div class="vbx2"></div>
