Update the grade graph and add the location graph

--- a/content/academics.html
+++ b/content/academics.html
@@ -9,6 +9,17 @@
   difficult, its class average was only slightly lower compared to other terms.
   This suggests that students progressively become better at coping with
   difficult courses.
+  <!-- Note that 4B we don't have lots of data points,
+  That Median are not really representative
+  1A: 86.4
+  1B: 81.3
+  2A: 84.8
+  2B: 82.2
+  3A: 87.8
+  3B: 83.1
+  4A: 89.6
+  4B: 90.6
+  -->
 </p>
 <div class="half second">
   <span class="graph-title">Grades from 1A to 4A </span>
@@ -110,6 +121,48 @@ attending all classes.
 <div class="half second">
   <span class="graph-title">Parents' education compared to grades</span>
   <div id="parent-grades"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Location</h3>
+<p class="half">
+  <span class="big">
+  The preferred residences in first year was V1 and UWP (not CMH). From first year on, Lester was the most popular
+  street to live on in Waterloo.
+  <!-- Students come from many different ethnic backgrounds  -->
+  <!--, which span 27 different countries. -->
+  </span>
+  The likely popularity of Lester street is how close it is to Campus. 
+  When COVID hit most people decided to stay in Waterloo in their 4A term, likely hoping that measures would loosen over the summer.
+  However, in 4B, most students decided to move back home.
+  <!-- There was a significant number of students Caucasians, and East
+  Asians, although it is interesting to note that most Women were East Asian. -->
+</p>
+<div class="half second">
+  <span class="graph-title">Students' location pre COVID</span>
+  <div id="campus-location-pre"></div>
+
+  <div class="scale">
+    <span class="legend">Term number:</span>
+    <div class="loc-pre-item c1">1A</div>
+    <div class="loc-pre-item c2">1B</div>
+    <div class="loc-pre-item c3">2A</div>
+    <div class="loc-pre-item c4">2B</div>
+    <div class="loc-pre-item c5">3A</div>
+    <div class="loc-pre-item c6">3B</div>
+  </div>
+  <span class="graph-title">Students' location post COVID</span>
+  <div id="campus-location-post"></div>
+
+  <div class="scale">
+    <span class="legend">Term number:</span>
+    <div class="loc-post-item c1">4A</div>
+    <div class="loc-post-item c2">4B</div>
+  </div>
+  <p class="full center">
+  <b> Interactive: </b> Click on a term number to view the plot for that term.
+  </p>
 </div>
 
 <div class="vbx4"></div>
