Add Misc Graphs on Enrollment, New Story

--- a/content/misc.html
+++ b/content/misc.html
@@ -50,15 +50,39 @@
 
 <div class="vbx2"></div>
 
-<h3> Customizing the experience </h3>
+<!-- TODO: Move this to a new section? -->
+<h3> Beauty in the details </h3>
 <p class="full">
 Reflecting on our time at Waterloo means more than making some graphs. Here are
 some stories over the past 5 years.
 </p>
 <div class="vb"></div>
-<div class="half path-section"> <!-- TODO: Maybe make it full width? -->
+<div class="half path-section">
   <div class="path-item">
-    <span class="big path-title">Turnt on a Tuesday</span>
+    <span class="big path-title">Biking Buddies</span>
+    <p>
+      "In my second coop term, I snuck into Google's headquarters in Palo Alto with 
+      my good friend [redacted] on a weekend, and no one was around so we stole their
+      campus bikes and went sightseeing around the area. My phone's camera had broken
+      autofocus so we couldn't get nice pictures, which is the sad part. We were good
+      boys so we returned the bikes. Finally, in an attempt to catch the free Palo Alto shuttle, we ran for a good
+      few kilometres.
+      
+      <br /><br />
+      
+      [This] stands out as one of my favourite days in SE since it was the
+      day I learned about [redacted]'s interest in entrepreneurship, which also made
+      me more optimistic about it, which has now led into us building out our FYDP
+      venture."
+    </p>
+  </div>
+
+  <div class="vbx2"></div>
+</div>
+
+<div class="half second">
+  <div class="path-item">
+    <span class="big path-title">Turns on a Tuesday</span>
     <p>
       "I got drunk at a work party on time in San Francisco on a work term. I don't
       remember anything that happened that night but I woke up in a hospital with
@@ -74,9 +98,13 @@ some stories over the past 5 years.
     </p>
   </div>
 
-  <div class="vbx2"></div>
-
-  <!-- TODO: Add more stories or more this to a new section -->
+  <div class="path-item">
+    <span class="big path-title">Climbing Coders</span>
+    <p>
+      "After a party with some other SEs, we thought it would be a fun idea to
+      climb some buildings, ended up with me falling off said building."
+    </p>
+  </div>
 </div>
 
 <h3> Crying Frequency </h3>
@@ -97,6 +125,33 @@ some stories over the past 5 years.
 <div class="half second">
   <span class="graph-title">Average frequency of crying in a term</span>
   <div id="crying"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3> Contemplating Enrollment </h3>
+<p class="half">
+  <span class="big">
+    The majority of SE students considered switching to another major.
+  </span>
+  This relates to the age old question asked of Waterloo students:
+  <a href="https://uwaterloo.ca/software-engineering/future-undergraduate-students/comparing-bse-basc-comp-eng">
+    What's the difference between Computer Science, Computer Engineering, and
+    Software Engineering?
+  </a>
+</p>
+<div class="half second">
+  <span class="graph-title">Considered switching majors</span>
+  <div id="transfer-thoughts"></div>
+</div>
+<p class="half">
+  <span class="big">
+    Most SE students had no doubts about completing their bachelors.
+  </span>
+</p>
+<div class="half second">
+  <span class="graph-title">Considered leaving university</span>
+  <div id="dropout-thoughts"></div>
 </div>
 
 <div class="vbx2"></div>
