Add Misc Graph on Grad Rate

--- a/content/misc.html
+++ b/content/misc.html
@@ -144,14 +144,28 @@ some stories over the past 5 years.
   <span class="graph-title">Considered switching majors</span>
   <div id="transfer-thoughts"></div>
 </div>
+
 <p class="half">
   <span class="big">
     Most SE students had no doubts about completing their bachelors.
   </span>
+  Only 4 respondants pondered leaving university.
 </p>
 <div class="half second">
   <span class="graph-title">Considered leaving university</span>
   <div id="dropout-thoughts"></div>
+</div>
+
+<p class="half">
+  <span class="big">
+    Results from the previous two graphs came from mostly SE grads.
+  </span>
+  44 of the 50 respondants are SE graduates of this year. This represents about half
+  of the total graduates (92). <!-- TODO: confirm that it was 92 grads? -->
+</p>
+<div class="half second">
+  <span class="graph-title">Is an SE 21 grad</span>
+  <div id="se21-grad"></div>
 </div>
 
 <div class="vbx2"></div>
