add relationships section about family

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ layout: main
         {% include_relative content/future.html %}
     </div>
 </section>
+<section class="bg-2">
+    <div class="content">
+        {% include_relative content/relationships.html %}
+    </div>
+</section>
 <section class="bg-8">
     <div class="content">
         {% include_relative content/end.html %}
