Update Demographic Section (#1)
* Update data for demographic section and add missing graphs

* Add horizontal bar graph that handles multi series

* Update some graphs and add discussion and analysis

* fix nits

--- a/content/introduction.html
+++ b/content/introduction.html
@@ -52,7 +52,7 @@ by Joey Loi and Atef Chaudhury.
         Companies, locations, salary, factors affecting salary
       </p>
     </li>
-    <li>2 <a href="#background">Background</a></li>
+    <li>2 <a href="#background">Demographic & Background</a></li>
     <li>
       <p class="nested">
         Gender, ethnicity, high school, family
