--- a/content/background.html
+++ b/content/background.html
@@ -1,19 +1,18 @@
-<h1 id="background"> Background </h1>
+<h1 id="background"> Demographic & Background</h1>
 <h3> Gender </h3>
 <p class="half">
   <span class="big">
-    Women make up 17% of students, which is approximately the same proportion as
-    the number of women in tech.
+  Women make up 21% of students, which is less than the percent of women in tech (25%).
   </span>
-  Although we are still working towards increasing the number of minority gender
-  groups, we can see a positive increase within the recent SE classes
+  The class saw a 3% increase in women representation from 1A to 4B, in first year, 
+  18% of the class were female.
   <br /> <br />
-  There are also many on-campus communities that supports the success of women in
-  computer science at UWaterloo. For example,
-  <a href="http://wics.uwaterloo.ca/about/">Women in Computer Science</a>, and
+  There are many on-campus communities that supports the success of women in
+  computer science and engineering at UWaterloo. For example,
+  <a href="https://sesoc.uwaterloo.ca/wise">Women in Software (WiSE)</a>,
+  <a href="http://wics.uwaterloo.ca/about/">Women in Computer Science (WiCS)</a>,
+  <a href="https://uwaterloo.ca/women-in-engineering/">Women in Engineering (WiE)</a>, and
   <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo </a>.
-  <br /><br />
-  One student preferred not to disclose.
 </p>
 <div class="half second">
   <span class="graph-title">Gender proportion in class</span>
@@ -22,38 +21,54 @@
 
 <div class="vbx2"></div>
 
-<h3> Ethnicity</h3>
+<h3>Year of Birth</h3>
 <p class="half">
   <span class="big">
-  Students come from many different ethnic backgrounds, which span 27 different countries.
-  </span>
-  There was a significant number of students Caucasians, South Asians, and East
-  Asians.
+  76.4% of respondents were born in 1998.
 </p>
 <div class="half second">
-  <span class="graph-title">Students' ethnicities</span>
-  <div id="ethnicity"></div>
+  <span class="graph-title">Students' Year of Birth</span>
+  <div id="year-of-birth"></div>
 </div>
 
 <div class="vbx2"></div>
 
-<h3> High school extracurriculars</h3>
+<h3> Ethnicity</h3>
 <p class="half">
   <span class="big">
-  Less than 35% of students were involved in a STEM, CS or Robotics clubs during
-  high school.
+  Students come from many different ethnic backgrounds. 
   </span>
-  Instead, students participated in all sorts of extracurricular
-  activities such as volunteer work for non-profits, being a cadet, starting a
-  school newspaper, and more. Pursuing their own unique personal interests was a
-  common pattern amongst students during high school.
-  <br /> <br />
-  Note that this is not a comprehensive list, and that students have
-  participated in other extracurricular activities as well.
+  There was a significant number of students Caucasians, and East
+  Asians, although it is interesting to note that most women were East Asian.
 </p>
 <div class="half second">
-  <span class="graph-title">Extracurriculars during high school</span>
-  <div id="hs-extras"></div>
+  <span class="graph-title">Students' ethnicities</span>
+  <div id="ethnicity"></div>
+
+  <div class="scale">
+    <span class="legend">Filter:</span>
+    <div class="ethnicity-item c1">All</div>
+    <div class="ethnicity-item c2">Women</div>
+    <div class="ethnicity-item c3">Men</div>
+  </div>
+  <p class="full center">
+  <b> Interactive: </b> Click on a provided filter to view the plot for that filter.
+  </p>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Mother Tongue</h3>
+<p class="half">
+  <span class="big">
+  45% of respondents at least speak two languages, with English not being their first language.
+  </span>
+  There was a significant number of students who spoke English and Mandarin as their first language, but overall,
+  there is a wide variety of language spoken by students.
+</p>
+<div class="half second">
+  <span class="graph-title">Students' Mother Tongue</span>
+  <div id="mother-tongue"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -61,16 +76,16 @@
 <h3> International students </h3>
 <p class="half">
   <span class="big">
-  14% of students are international, which is 4% fewer than University of
-  Waterloo as a whole.
+  8.4% of respondents are international students, however, according to the official headcount
+  12.9% of the students in the class are international.
   </span>
-  This could be due to the higher tuition costs for international students, who
-  pay 27% more than the average international tuition fee. This could also be
-  caused by the Engineering Admissions having a max quota for international
-  students.
+  The class saw a 2.1% decrease in international students from 1A (15%) to 4B.
+  This could be due to the higher tuition costs for international students, especially in Engineering.
+  International term tuition fees, prior to the academic year 2018/19 where it was subject to a 62.1% fee increase, 
+  were around $15000 for computer science students. This made the computer science program more cost beneficial to
+  international students.
   <br /> <br />
-  International students came from countries including Nigeria, United Arab Emirates,
-  China, Pakistan, South Korea, Indonesia.
+  International students came from countries such as China and India.
 </p>
 <div class="half second">
   <span class="graph-title">Proportion of international students</span>
@@ -79,15 +94,57 @@
 
 <div class="vbx2"></div>
 
+<h3>Immigrated to Canada</h3>
+<p class="half">
+  <span class="big">
+  35.7% of students, or 39% of domestic students immigrated to Canada.
+  </span>
+  Immigrated students came from countries including [TO ADD IF WE GET THIS INFO LATER]
+</p>
+<div class="half second">
+  <span class="graph-title">Students' Immigrated to Canada</span>
+  <div id="immigrated"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Home Location</h3>
+<p class="half">
+  <span class="big">
+  65.3% of students came from Ontario, 43% came from GTA/Toronto area specifically.
+  </span>
+  In Canada, students also came from other provinces such as Alberta, Britich Columbia, New Brunswick and Quebec.
+</p>
+<div class="half second">
+  <span class="graph-title">Students' Home Location</span>
+  <div id="home-location"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Sexual Orientation</h3>
+<p class="half">
+  <span class="big">
+  6.9% of respondents are part of the LGBTQ+ community.
+  </span>
+  4 students preferred not to disclose.
+</p>
+<div class="half second">
+  <span class="graph-title">Students' Sexual Orientation</span>
+  <div id="sexual-orientation"></div>
+</div>
+
+<div class="vbx2"></div>
+
 <h2> Family background </h2>
 <h3> Income </h3>
 <p class="half">
   <span class="big">
-    More than half of students come from families whose income is higher than
-    the median Canadian family income ($76,000).
+  More than half of students come from families whose income is higher than
+  the median Canadian family income ($76,000).
   </span>
-  These numbers do not include income from co-op terms. The majority of students
-  have a family income between $50,000 and $150,000.
+  These numbers represent the income the students' family had prior to starting
+  University. The majority of students have a family income between $50,000 and $200,000.
 </p>
 <div class="half second">
   <span class="graph-title">Number of students per family income class</span>
@@ -101,13 +158,118 @@
   <span class="big">
   There are more parents with Masters and Doctorates combined than Bachelors.
   </span>
-  Compared to our parents, only 3 students out of 113 are planning on attending
+  Compared to our parents, only 1 student is planning on attending
   grad school. This could
-  be a generational shift, or maybe it could just be that students are tired of
-  school after 5 years with no summer.
+  be a generational shift, or maybe because entering the industry does not require
+  a Master or Doctorate.
 </p>
 <div class="half second">
   <span class="graph-title">Parents' highest education</span>
   <div id="parent-education"></div>
 </div>
+
+<div class="vbx2"></div>
+
+<h3>Siblings</h3>
+<p class="half">
+  <span class="big">
+  Majority of students have at least 1 sibling.
+  <!-- Maybe look at sibling number vs family income? -->
+</p>
+<div class="half second">
+  <span class="graph-title">Students' Number of Siblings</span>
+  <div id="siblings"></div>
+</div>
+
+<div class="vbx2"></div>
+<h2> High School, Enriched Programs & CEGEP </h2>
+
+<div class="vbx2"></div>
+
+<h3>Admission Average</h3>
+<p class="half">
+  <span class="big">
+  The OSS average for the class was 96.5% and the OSS 10th decile was 94.3%.
+  </span>
+  Although it is recommended to have a high 90 average to get
+  accepted into the program, 11.3% of respondents had an average less than 95%.
+</p>
+<div class="half second">
+  <span class="graph-title">Admission Average</span>
+  <div id="admission-average"></div>
+</div>
+
+<h3>Enriched Programs</h3>
+<p class="half">
+  <span class="big">
+  Most students did not take part in an Enriched Program.
+  </span>
+  The most popular Enriched Programs among respondents were
+  AP and IB.
+</p>
+<div class="half second">
+  <span class="graph-title">Students & Enriched Programs</span>
+  <div id="enriched-program"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>CEGEP</h3>
+<p class="half">
+  <span class="big">
+  All students from Quebec attended CEGEP partially, meaning they did not graduate.
+  </span>
+  Among respondents, no students from outisde of Quebec attended CEGEP.
+</p>
+<div class="half second">
+  <span class="graph-title">Quebec Students & CEGEP</span>
+  <div id="cegep"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>CEGEP Fields</h3>
+<p class="half">
+  <span class="big">
+  The students who attended CEGEP took part in a wide variety of programs related to Science, 
+  Mathematics, and Computer Science.
+  </span>
+  Unlike other universities, CEGEP students, enrolled in an Engineering program at Waterloo, cannot convert
+  any of their course taken in CEGEP into university credits, except for Calculus courses which can be counted as
+  a credit toward Math 117 (Calculus 1 for Engineering).
+</p>
+<div class="half second">
+  <span class="graph-title">Students & CEGEP Fields</span>
+  <div id="cegep-attended"></div>
+</div>
+
+<div class="vbx2"></div>
+<h2> Others </h2>
+
+<h3>Programming Knowlege</h3>
+<p class="half">
+  <span class="big">
+  5.6% of Students did not know how to program prior to starting University.
+  </span>
+  Programming knowledge is a required admission criteria to join the Software Engineering
+  Program at the University of Waterloo.
+  Among other reasons, this could also be due to transfer students who joined the program later.
+</p>
+<div class="half second">
+  <span class="graph-title">Students Knew Programming in High School</span>
+  <div id="programming"></div>
+</div>
+
+<div class="vbx2"></div>
+
+<h3>Cat or Dog</h3>
+<p class="half">
+  <span class="big">
+  Most students are Dog lovers! 🐕
+</p>
+<div class="half second">
+  <span class="graph-title">Cat or Dog</span>
+  <div id="cat-or-dog"></div>
+</div>
+
 
